# libgrpc_simplify

./: CMakeLists.txt  README.md
client_tests/: CMakeLists.txt
client_tests/src/: main.cpp  test_async.cpp  test_sync.cpp
proto/: hello.proto
server_tests/: CMakeLists.txt
server_tests/src/: main.cpp  test_async.cpp  test_sync.cpp
stub/: hello.grpc.pb.cc  hello.grpc.pb.h  hello.pb.cc  hello.pb.h
